--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "livewire/flux": "^2.1.1",
         "livewire/volt": "^1.7.0",
         "rappasoft/laravel-livewire-tables": "^3.7",
+        "spatie/laravel-permission": "^6.17",
         "tymon/jwt-auth": "^2.2"
     },
     "require-dev": {
